# lrslib

./: .docker-build.sh  .gitignore  .travis-build.sh  .travis.yml  2nash.c  Makefile.am  USERGUIDE.html  buffer  buffer.c  c30-15.ext  chdemo.c  cleanthreads  configure.ac  cp5.ext  cube.ext  cube.ine  cubetop.ine  cycle.ext  fel.c  fourier.c  hvref.c  lpdemo.c  lpdemo1.c  lpdemo2.c  lrs  lrs.c  lrs.cpp  lrsdriver.c  lrsdriver.h  lrsgmp.c  lrsgmp.cpp  lrsgmp.h  lrslib-041.patch  lrslib.c  lrslib.cpp  lrslib.h  lrslib.html  lrslong.c  lrslong.cpp  lrslong.h  (+36 more)
.github/workflows/: ci-sage.yml
ext/metric/: cp5.ext  cp6.ext
ext/test/: Mit.ext  c30-15.ext  cube.ext  cut32_16.ext  cyclic25_13.ext  mit33.ext  mp5.ext  simp15.ext  vol1.ext  vol2.ext
games/: gamec  gamem  gamem.2  gamem.gmp  gamemp  gamemp.1
ine/: cube.ine  lp1.ine  lp2.ine
ine/cocoa13/: bv10.ine  bv4.ine  bv5.ine  bv6.ine  bv7.ine  bv8.ine  bv9.ine  c28-14.ext  c40-20.ext  perm10.ine  perm4.ine  perm5.ine  perm6.ine  perm7.ine  perm8.ine  perm9.ine
ine/metric/: redund.core
ine/mit/: mit.ine  mit288-281.ine  mit31-20.ine  mit90-86.ine
ine/redund/: cube.ine  ep.ine  metric80_16.ine  mp5.ine  mp5a.ine  mp5b.ine  mp5c.ine  non_par.ine  par.ine
ine/test/: cube.ine  in0.ine  in2.ine  in4.ine  in5.ine  in6.ine  in7.ine  inf.ine  kkd38_6.ine  kq20_11.ine  lcube.ine  lrslib.c  lrslib.h  metric80_16.ine  mit31_20.ine  mp5.ine  trunc10.ine
ine/test-060/: perm10.ine
ine/test-061/: fq48-19.ine  m6.ine
ine/test-062/: c30-15.ext  fq48-19.ine  zfw91.ine  zfw91nn.ine
ine/test-062/normaliz/: bv7.in  c30-15.ext.in  c40-20.ext.in  cp6.in  fq48-19.in  m6.in  mit.in  mit71-61.in  perm10.in  zfw91.in
ine/test-062/porta/: bv7.ine.ieq  c30-15.ext.poi  c40-20.ext.poi  cp6.ine.ieq  fq48-19.ine.ieq  m6.ine.ieq  mit.ine.ieq  mit71-61.ine.ieq  perm10.ine.ieq  zfw91.ine.ieq
man/: lrs.1  lrslib.1  lrsnash.1  mplrs.1
mplrs/: Makefile.am
